--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,12 +10,14 @@
     android:padding="40px"
     >
 
+
     <EditText
         android:id="@+id/logUName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Username"
-        android:textSize="50px"/>
+        android:textSize="50px"
+        />
 
     <EditText
         android:id="@+id/logPass"
