--- a/app/src/main/res/layout/fragment_greetings.xml
+++ b/app/src/main/res/layout/fragment_greetings.xml
@@ -3,33 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GreetingsFragment"
-    android:padding="40dp">
+    android:padding="40dp"
+    tools:context=".GreetingsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Greetings,"
-            android:textSize="20dp"
-            />
+            android:textSize="20dp" />
+
         <TextView
             android:id="@+id/tvuname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
-            />
+            android:textSize="30dp" />
 
         <Button
             android:id="@+id/btnlogout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="logout"
-            />
+            android:text="logout" />
 
     </LinearLayout>
 
